--- a/scss/section/_apperance.scss
+++ b/scss/section/_apperance.scss
@@ -18,9 +18,10 @@
       }
     }
     .card-image {
-      height:60%;
+      height:auto;
       img {
         width: 100%;
+        height:auto;
         margin: 0 auto;
       }
     }
